--- a/KotLinView/app/src/main/res/layout/adapter_sum.xml
+++ b/KotLinView/app/src/main/res/layout/adapter_sum.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:id="@+id/rel">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_bg"
