--- a/KotLinView/app/src/main/res/layout/find_fragment.xml
+++ b/KotLinView/app/src/main/res/layout/find_fragment.xml
@@ -27,4 +27,9 @@
             />
 
     </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:id="@+id/findrlv"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
