--- a/KotLinView/app/src/main/res/layout/home_fragment.xml
+++ b/KotLinView/app/src/main/res/layout/home_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 <LinearLayout
     android:layout_width="match_parent"
@@ -29,10 +30,17 @@
             android:layout_marginTop="10dp"
             />
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/home_recyview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/home_recyview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
+
 </LinearLayout>
 
 
