--- a/KotLinView/app/src/main/res/layout/home_item.xml
+++ b/KotLinView/app/src/main/res/layout/home_item.xml
@@ -2,38 +2,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<ImageView
+    android:layout_height="wrap_content">
+<com.facebook.drawee.view.SimpleDraweeView
     android:id="@+id/home_feed"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:src="@mipmap/ic_launcher"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
+        android:layout_height="60dp">
+
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/home_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:src="@mipmap/ic_launcher" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/home_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
+                android:textSize="20dp"
+                android:layout_marginTop="5dp"
+                android:text="1111" />
 
-                android:text="1111"/>
             <TextView
                 android:id="@+id/home_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
-                android:text="发布于"/>
+                android:text="发布于" />
         </LinearLayout>
 
     </RelativeLayout>
