--- a/KotLinView/app/src/main/res/layout/hot_fragment.xml
+++ b/KotLinView/app/src/main/res/layout/hot_fragment.xml
@@ -4,29 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:background="#ffffff"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hot"
-            android:textSize="30sp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="200dp"
-            />
-        <ImageView
-            android:id="@+id/hsousuo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@mipmap/icon_search"
-            android:layout_marginLeft="180dp"
-            android:layout_marginTop="10dp"
-            />
-    </LinearLayout>
+   <include layout="@layout/title"/>
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/tabs"
