--- a/KotLinView/app/src/main/res/layout/mine_fragment.xml
+++ b/KotLinView/app/src/main/res/layout/mine_fragment.xml
@@ -5,31 +5,26 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:background="#ffffff"
+        android:layout_height="40dp"
         >
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mine"
-            android:textSize="30sp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="200dp"
-            />
+            android:textSize="20sp"
+            android:layout_centerInParent="true"/>
         <ImageView
-            android:id="@+id/sousuo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/iv_setting"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:background="@mipmap/icon_setting"
-            android:layout_marginLeft="160dp"
-            android:layout_marginTop="3dp"
-            />
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"/>
 
-    </LinearLayout>
+    </RelativeLayout>
     <FrameLayout
         android:layout_width="match_parent"
         android:alpha="0.5"
