--- a/KotLinView/app/src/main/res/layout/find_fragment.xml
+++ b/KotLinView/app/src/main/res/layout/find_fragment.xml
@@ -31,5 +31,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:scrollbars="none"
         android:id="@+id/findrlv"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
