--- a/KotLinView/app/src/main/res/layout/findview.xml
+++ b/KotLinView/app/src/main/res/layout/findview.xml
@@ -5,14 +5,23 @@
     android:layout_gravity="center"
     android:id="@+id/findr"
     android:background="#fff">
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
         android:id="@+id/beijingtu"
         android:gravity="center"
+        android:layout_marginTop="10dp"
         android:src="@mipmap/ic_launcher"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.3"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
+        android:background="#000"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
