--- a/KotLinView/app/src/main/res/layout/findxqitem.xml
+++ b/KotLinView/app/src/main/res/layout/findxqitem.xml
@@ -5,11 +5,15 @@
     android:id="@+id/findxqtiao"
     android:layout_gravity="center">
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/findxqtu"/>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.3"
+        android:background="#000"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
