--- a/KotLinView/app/src/main/res/layout/activity_advise.xml
+++ b/KotLinView/app/src/main/res/layout/activity_advise.xml
@@ -5,12 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+    <include layout="@layout/title_activity"/>
 
     <View
         android:layout_width="match_parent"
