--- a/KotLinView/app/src/main/res/layout/activity_save.xml
+++ b/KotLinView/app/src/main/res/layout/activity_save.xml
@@ -3,15 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentTop="true"
-        android:background="@color/white">
-    </android.support.v7.widget.Toolbar>
-
+    <include layout="@layout/title_activity"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
@@ -33,6 +25,4 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </FrameLayout>
-
-
 </LinearLayout>
