--- a/KotLinView/app/src/main/res/layout/activity_save.xml
+++ b/KotLinView/app/src/main/res/layout/activity_save.xml
@@ -11,10 +11,24 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/simple"
+                android:layout_width="150dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"/>
+            <TextView
+                android:id="@+id/tv_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:textStyle="bold"/>
+        </LinearLayout>
         <TextView
             android:visibility="gone"
             android:id="@+id/tv_hint"
